@@ -1,3 +1,13 @@
+*** 20010604_8 by greg
+Wow, I feel cool or something.
+
+Plugged myself into contributors. Maybe I should start looking at -7...
+
+
+*** 20010604_7 by leeh
+- commited cryptserv now the conflicts are gone
+
+
 *** 20010604_6 by leeh
 - commited initial revision of HIDE_SERVERS_IPS, to mask servers ips
   from everyone (including opers)
